--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .navbar{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(211, 240, 106, 0.6);
 }
 .navbar-brand{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -44,3 +44,32 @@ nav ul li :hover{
     justify-content: space-between;
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;}
+
+    .districtbgclr{
+        background-color: rgba(240, 245, 247, 0.9);
+        font-weight: 600; 
+    }
+    .districtmap{
+        font-family: 'Lobster', sans-serif;
+    }
+    .signupform {
+        font-weight: 600; 
+    }
+    .block{
+        width: 40rem;
+        margin: auto;
+    }
+
+    .first-letter1{
+        font-weight: 400;
+    float: left;
+    font-size: 84px;
+    line-height: 64px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+    font-family: "Source Sans Pro", sans-serif;
+    }
+    
+    
+    
